breezy-debian (2.8.27) UNRELEASED; urgency=medium

  * Support dotted revnos when referencing upstream revisions.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 06 Mar 2019 21:35:13 +0000

breezy-debian (2.8.26) unstable; urgency=medium

  * Add a 'vcs:' location resolver that uses the location provided by
    the package in the current directory.
  * Bump bzr version to 3.0.0~bzr7290; required for MemoryTags class.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 26 Feb 2019 06:16:06 +0000

breezy-debian (2.8.25) unstable; urgency=medium

  * Support newer versions of Breezy where generate_ids has moved to
    breezy.bzr.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 14 Feb 2019 22:33:59 +0000

breezy-debian (2.8.24) unstable; urgency=medium

  * Support git snapshot id in version strings when merging a snapshot
    from an upstream git repository.
  * Support finding upstream git revisions by snapshot id in upstream
    version.
  * Support merging from upstream branches without random access
    support, i.e. remote git repositories.
  * Bump debhelper from old 9 to 10.
  * Bump standards version to 4.3.0 (no changes).
  * debian/copyright: Remove reference to removed bzrtools_bzrtools.py.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 01 Feb 2019 15:50:52 +0000

breezy-debian (2.8.23) unstable; urgency=medium

  * Convert copyright file to machine-readable format.
  * Pass copyright-file to uscan, so that Files-Excluded can be read.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 22 Jan 2019 00:35:45 +0000

breezy-debian (2.8.22) unstable; urgency=medium

  * Set Enhances: brz.
  * Fix compatibility with newer snapshots of Breezy.
  * Trim trailing whitespace.
  * Remove unnecessary XS-Testsuite field in debian/control.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 25 Nov 2018 13:46:55 +0000

breezy-debian (2.8.21) unstable; urgency=medium

  * Support finding upstream revisions based on bzr revno.
  * Fix error when attempting to release from branch without colocated