@@ -1,6 +1,7 @@
 breezy-debian (2.8.27) UNRELEASED; urgency=medium
 
   * Support dotted revnos when referencing upstream revisions.
+  * Support a Repository-Tag-Prefix field in debian/upstream/metadata.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 06 Mar 2019 21:35:13 +0000
 
